# drake

./: 0.0005.txt  README.md  junda.txt  notsetinit.txt  see.txt
automotive/: qp_balance.py
examples/: BUILD.bazel  data.txt  data2.txt  data3.txt  simple_continuous_time_system.cc
examples/Interfaces/: BUILD.bazel  Terrain_Construct.cpp  Terrain_Construct.h  conver_stl2obj.sh  simulator1.STL
examples/KneedCompassGait/: BUILD.bazel  KCG_Input.named_vector  KCG_common.cpp  KCG_common.h  KneedCompassGait.cpp  KneedCompassGait.gv  KneedCompassGait.h  KneedCompassGait.urdf  KneedCompassGait_ContinuousState.named_vector  KneedCompassGait_Params.named_vector  KneedCompassGait_lcm.h  README.md  cassie.urdf  data.txt  data2.txt  data3.txt  doIK.cpp  firstsimulate.cpp  frSimulate.cpp  linear_system.h  multibodyKCG.cpp  multibodyKCG.h  newKCG.cpp  newKCG.h  qpController.cpp  qpController.h  qpController2.cpp  qpController2.h  qpControllertest.cpp  qpControllertest.h  qp_multi_step.cpp  qp_multi_test.cpp  qp_one_step.cpp  qptest.cpp  rdSimulate.cpp  rigid_body_tree_construction.cc  secsimulate.cpp  simulator.h  system.h  test.cpp  (+1 more)
examples/KneedCompassGait/deprecated/: KneedCompassGait.cpp  KneedCompassGait.h  KneedCompassGait_lcm.cpp  data2.txt  data3.txt  newKCG.h  qpController.h
examples/KneedCompassGait/include/: kneed_compass_gait.h  phase_space_planner.h  utils.h
examples/KneedCompassGait/models/: KneedCompassGait.urdf
examples/KneedCompassGait/src/: IK_simulate.cpp  kneed_compass_gait.cc  phase_space_planner.cc
examples/acrobot/: BUILD.bazel  run_lqr.cc  run_swing_up.cc
examples/cassie/: BUILD.bazel  cassie_common.cc  cassie_common.h  cassie_simulation_test.cc
examples/cassie/models/: BUILD.bazel
examples/cassie/models/urdf/: cassie.urdf
examples/compass_gait/: BUILD.bazel  cart.urdf  cart1.urdf  cassie.urdf  compass_gait.cc  compass_gait.h  quadrotor.urdf  quadrotor1.urdf  quadrotor2.urdf  quadrotor3.urdf  quadrotor4.urdf  simulate.cc  simulator1.STL  table.STL
examples/kuka_iiwa_arm/: iiwa_common.cc  kuka_simulation.cc  kuka_torque_controller.cc
examples/kuka_iiwa_lidar/: BUILD.bazel
examples/kuka_iiwa_lidar/includes/: AddTerrainToWorld.h  KUKA_Common.h
examples/kuka_iiwa_lidar/models/: Readme.md  belt.urdf
examples/kuka_iiwa_lidar/models/cart/: cart2.urdf
examples/kuka_iiwa_lidar/models/quadrotor/: quadrotor4.urdf
examples/kuka_iiwa_lidar/srcs/: AddTerrainToWorld.cpp  BasicVisualize.cpp  KUKA_Common.cpp
lcmtypes/: BUILD.bazel  lcmt_KCG_m.lcm  lcmt_KCG_u.lcm  lcmt_KCG_x.lcm
