load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/skylark:drake_cc.bzl", "drake_cc_binary")
load("//tools/install:install_data.bzl", "install_data")

package(default_visibility = ["//visibility:private"])

drake_cc_library(
    name = "Terrain_Construction",
    srcs = ["Terrain_Construct.cpp"],
    hdrs = ["Terrain_Construct.h"],
    data = ["simulator1.obj"],
    visibility = ["//visibility:public"],
    deps = [
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//common:default_scalars",
        "//common:essential",
        "//common:find_resource",
        "//math:geometric_transform",
        "//systems/analysis:simulator",
    ],
)

install_data()

add_lint_tests()
