# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)

package(default_visibility = ["//visibility:private"])

drake_cc_vector_gen_library(
    name = "Kneed_compass_gait_vector_types",
    srcs = [
        "KneedCompassGait_ContinuousState.named_vector",
        "KneedCompassGait_Params.named_vector",
    ],
    visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "KneedCompassGait",
    srcs = ["KneedCompassGait.cpp"],
    hdrs = [
        "KneedCompassGait.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":Kneed_compass_gait_vector_types",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//common:default_scalars",
        "//common:essential",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "KneedCompassGait_lcm",
    srcs = ["KneedCompassGait_lcm.cpp"],
    hdrs = ["KneedCompassGait_lcm.h"],
    deps = [
        ":Kneed_compass_gait_vector_types",
        "//lcmtypes:kneed_compass_gait",
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
    ],
)

drake_cc_binary(
    name = "firstsimulate",
    srcs = ["firstsimulate.cpp"],
    add_test_rule = 1,
    data = ["KneedCompassGait.urdf"],
    test_rule_args = ["--target_realtime_rate=0.0"],
    deps = [
        ":KneedCompassGait",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//common:find_resource",
        "//lcm",
        "//math:geometric_transform",
        "//systems/analysis:simulator",
        "//systems/framework:diagram_builder",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "test",
    srcs = ["test.cpp"],
    data = ["KneedCompassGait.urdf"],
    deps = [
        ":Kneed_compass_gait_vector_types",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//common:find_resource",
        "//lcm",
        "//math:geometric_transform",
        "//systems/analysis:simulator",
        "//systems/framework:diagram_builder",
    ],
)

install_data()

add_lint_tests()
