# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)

package(default_visibility = ["//visibility:private"])

drake_cc_vector_gen_library(
    name = "compass_gait_vector_types",
    srcs = [
        "compass_gait_continuous_state.named_vector",
        "compass_gait_params.named_vector",
    ],
    visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "compass_gait",
    srcs = ["compass_gait.cc"],
    hdrs = [
        "compass_gait.h",
    ],
    data = ["CompassGait.urdf"],
    visibility = ["//visibility:public"],
    deps = [
        ":compass_gait_vector_types",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//common:default_scalars",
        "//common:essential",
        "//common:find_resource",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_binary(
    name = "simulate",
    srcs = ["simulate.cc"],
    add_test_rule = 1,
    data = [
        "CompassGait.urdf",
        "cassie.urdf",
        "meshes/achilles-rod.obj",
        "meshes/heel-spring.obj",
        "meshes/knee-output.obj",
        "meshes/knee-output-r.obj",
        "meshes/knee-spring.obj",
        "meshes/left_foot.obj",
        "meshes/left_hip.obj",
        "meshes/left_shin.obj",
        "meshes/left_thigh.obj",
        "meshes/left_yaw.obj",
        "meshes/pelvis.obj",
        "meshes/plantar-rod.obj",
        "meshes/right_foot.obj",
        "meshes/right_hip.obj",
        "meshes/right_shin.obj",
        "meshes/right_thigh.obj",
        "meshes/right_yaw.obj",
        "meshes/tarsus.obj",
        "meshes/tarsus-r.obj",
        "meshes/toe-output-crank.obj",
        "meshes/toe-output-crank-r.obj",
        "quadrotor.urdf",
        "quadrotor_base.obj",
        "quadrotor_base.wrl",
        "simulator1.obj",
    ],
    test_rule_args = ["--target_realtime_rate=0.0"],
    deps = [
        ":compass_gait",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//common:find_resource",
        "//lcm",
        "//math:geometric_transform",
        "//systems/analysis:simulator",
        "//systems/framework:diagram_builder",
        "@gflags",
    ],
)

drake_cc_googletest(
    name = "compass_gait_test",
    data = ["CompassGait.urdf"],
    deps = [
        ":compass_gait",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework/test_utilities:scalar_conversion",
    ],
)

install_data()

add_lint_tests()
